--- a/public/styles.css
+++ b/public/styles.css
@@ -125,5 +125,10 @@
   }
 
   #three-canvas {
-    pointer-events: none; /* Allows clicks to pass through to the video if needed */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* Allow clicks to pass through to the video if needed */
   }
